--- a/Frontend/doggo-api/src/Components/Breedlist.module.css
+++ b/Frontend/doggo-api/src/Components/Breedlist.module.css
@@ -27,3 +27,43 @@ padding: 5px;
     text-align: center;
     
 }
+@media screen and (max-width: 720px) {
+    .list{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        margin: auto;
+        justify-content: flex-start;
+       align-items: flex-start;
+       gap: 5px;
+       padding: 5px;
+       background-color: antiquewhite;
+    }
+    .list>div{
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+        width: 80%;
+    margin: auto;
+    border-radius: 5px;
+    padding: 5px;
+     background-color: rgb(138, 126, 115);
+    }
+  }
+  @media screen and (max-width: 320px) {
+    .list{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin: auto;
+        justify-content: flex-start;
+       align-items: flex-start;
+       gap: 5px;
+       padding: 5px;
+       background-color: antiquewhite;
+    }
+    .list>div{
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+        width: 90%;
+    margin: auto;
+    border-radius: 5px;
+    padding: 5px;
+     background-color: rgb(138, 126, 115);
+    }
+  }
