--- a/Frontend/doggo-api/src/Components/user.module.css
+++ b/Frontend/doggo-api/src/Components/user.module.css
@@ -13,9 +13,7 @@
 .user>input{
     height: 40px;
 }
-.user>select{
-    height: 40px;
-}
+
 .user>p{
     color: red;
     /* margin-left: -0%; */
@@ -30,17 +28,17 @@
     border-radius: 5px;
     border: none;
 }
-.nav {
-
-    background-color: black;
-    display: flex;
-    justify-content: space-evenly;
-    height: 50px;
-    align-items: center;
-}
-
-.nav>a {
-    text-decoration: none;
-    color: goldenrod;
-    font-size: 25px;
+@media screen and (max-width: 720px) {
+    .user{
+        /* border: 1px solid red; */
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        display:flex;
+        flex-direction: column;
+        width: 70%;
+        margin: auto;
+        margin-top:30px;
+        padding: 10px;
+        border-radius: 5px;
+        gap: 20px;
+    }
 }
