--- a/Frontend/doggo-api/src/Components/navbar.module.css
+++ b/Frontend/doggo-api/src/Components/navbar.module.css
@@ -24,3 +24,60 @@
     color: antiquewhite;
     cursor: pointer;
 }
+@media screen and (max-width: 720px) {
+    .nav{
+        background-color: rgb(218, 218, 165);
+        font-size: small;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 20px;
+        
+    }
+    .nav>a{
+        text-decoration: none;
+        font-size: 16px;
+        color: black;
+    }
+    .nav>a:hover{
+     background-color: goldenrod;
+     padding: 1px;
+     border-radius: 5px;
+    }
+    .btn{
+        padding: 2px;
+        background-color: teal;
+        border: none;
+        border-radius: 10px;
+        color: antiquewhite;
+        cursor: pointer;
+    }
+  }
+  @media screen and (max-width: 320px) {
+    .nav{
+        background-color: rgb(218, 218, 165);
+        font-size: smaller;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 20px;
+        
+    }
+    .nav>a{
+        text-decoration: none;
+        font-size: 12px;
+        color: black;
+    }
+    .nav>a:hover{
+     background-color: goldenrod;
+     padding: 1px;
+     border-radius: 5px;
+    }
+    .btn{
+        padding: 2px;
+        background-color: teal;
+        border: none;
+        border-radius: 10px;
+        color: antiquewhite;
+        cursor: pointer;
+        font-size: smaller;
+    }
+  }
