--- a/Frontend/doggo-api/src/Components/puppy.module.css
+++ b/Frontend/doggo-api/src/Components/puppy.module.css
@@ -14,3 +14,27 @@ h1{
     padding: 20px;
     text-align: center;
 }
+@media screen and (max-width: 720px) {
+    .breed{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 10px;
+        background-color: antiquewhite;
+     }
+     .breed>img{
+         width: 100%;
+         height: 300px; 
+     }
+  }
+  @media screen and (max-width: 320px) {
+    .breed{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+        background-color: antiquewhite;
+     }
+     .breed>img{
+         width: 100%;
+         height: 300px; 
+     }
+  }
