--- a/Frontend/doggo-api/src/Components/search.module.css
+++ b/Frontend/doggo-api/src/Components/search.module.css
@@ -22,4 +22,71 @@
 .inputs>button{
     width: 10%;
     height: 35px;
+    background-color: teal;
+    border: none;
+    border-radius: 2px;
+    margin-left: 2px;
+}
+
+@media screen and (max-width: 720px) {
+    .search{
+        display: grid;
+       grid-template-columns: repeat(3,1fr);
+       gap: 10px;
+       background-color: antiquewhite;
+    }
+    .search>img{
+        width: 100%;
+        height: 300px; 
+    }
+    .inputs{
+        background-color: antiquewhite;
+        padding: 20px;
+        /* border: 1px solid red; */
+        margin: auto;
+    }
+    .inputs>input{
+        width: 50%;
+        height: 30px;
+        margin-left: 20%;
+    }
+    .inputs>button{
+        width: 12%;
+        height: 35px;
+        background-color: teal;
+        border: none;
+        border-radius: 2px;
+        margin-left: 2px;
+    }
+}
+@media screen and (max-width: 720px) {
+    .search{
+        display: grid;
+       grid-template-columns: repeat(2,1fr);
+       gap: 10px;
+       background-color: antiquewhite;
+    }
+    .search>img{
+        width: 100%;
+        height: 300px; 
+    }
+    .inputs{
+        background-color: antiquewhite;
+        padding: 20px;
+        /* border: 1px solid red; */
+        margin: auto;
+    }
+    .inputs>input{
+        width: 50%;
+        height: 30px;
+        margin-left: 20%;
+    }
+    .inputs>button{
+        width: 20%;
+        height: 35px;
+        background-color: teal;
+        border: none;
+        border-radius: 2px;
+        margin-left: 2px;
+    }
 }
