--- a/Frontend/doggo-api/src/Components/Breedlist.module.css
+++ b/Frontend/doggo-api/src/Components/Breedlist.module.css
@@ -15,11 +15,11 @@
 margin: auto;
 border-radius: 5px;
 padding: 5px;
- background-color: rgb(138, 126, 115);
+ background-color: rgb(196, 128, 65);
 }
 .list>div>li>a{
     text-decoration: none;
-    color: black;
+    color: rgb(255, 250, 250);
     font-size: 18px;
 }
 .head{
